MB-54975: Update Ephemeral replica memory stats on DEL_VBUCKET

We currently only update the Ephemeral replica memory tracking stats
that are used to determine if we auto delete items when we change the
vBucket state via SET_VBUCKET. We are not updating the stat when we
delete the vBucket via DEL_VBUCKET which is causing us to overcount the
value and stop evicting from active vBuckets sooner than we ought to.

Change-Id: I9d376fb4bbb122368d741996478033fa1732704f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/184452
Well-Formed: Restriction Checker
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James H <james.harrison@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>